SnapFlow/k8s/04-networking/networkpolicy-nlp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nlp-netpol
  namespace: snapflow-prod
spec:
  podSelector:
    matchLabels:
      app: v3-nlp-worker
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: snapflow-infra
      podSelector:
        matchLabels:
          app: pgbouncer
    ports:
    - port: 5432
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
